# HuskarUI

./: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README-zh_CN.md  README.md
.github/workflows/: windows-qt6.7.3-msvc2019.yml  windows-qt6.8.3-msvc2022.yml
gallery/: CMakeLists.txt
gallery/cpp/: creator_p.h  main.cpp
gallery/qml/: Gallery.qml  Global.qml
gallery/qml/Controls/: CodeBox.qml  CodeRunner.qml  Description.qml  ThemeToken.qml  UpdateDesc.qml
gallery/qml/Examples/DataDisplay/: ExpAnimatedImage.qml  ExpAvatar.qml  ExpBadge.qml  ExpCard.qml  ExpCarousel.qml  ExpCheckerBoard.qml  ExpCollapse.qml  ExpEmpty.qml  ExpImage.qml  ExpImagePreview.qml  ExpQRCode.qml  ExpQrCode.qml  ExpShield.qml  ExpSpin.qml  ExpTabView.qml  ExpTable.qml  ExpTableView.qml  ExpTabs.qml  ExpTag.qml  ExpTimeline.qml  ExpToolTip.qml  ExpTourFocus.qml  ExpTourStep.qml  ExpTree.qml
gallery/qml/Examples/DataEntry/: ExpAutoComplete.qml  ExpCheckBox.qml  ExpColorPicker.qml  ExpColorPickerPanel.qml  ExpDateTimePicker.qml  ExpFileBrowser.qml  ExpInput.qml  ExpInputInteger.qml  ExpInputNumber.qml  ExpInputOnce.qml  ExpMultiSelect.qml  ExpOTPInput.qml  ExpRadio.qml  ExpRadioBlock.qml  ExpRate.qml  ExpSelect.qml  ExpSlider.qml  ExpSwitch.qml  ExpTextArea.qml
gallery/qml/Examples/Effect/: ExpAcrylic.qml  ExpMaskOverlay.qml  ExpShadow.qml  ExpSwitchEffect.qml
gallery/qml/Examples/Feedback/: ExpAlert.qml  ExpDrawer.qml  ExpMessage.qml  ExpModal.qml  ExpNotification.qml  ExpPopconfirm.qml  ExpPopover.qml  ExpProgress.qml  ExpResult.qml  ExpWatermark.qml
gallery/qml/Examples/General/: ExpButton.qml  ExpButtonBlock.qml  ExpCaptionBar.qml  ExpCaptionButton.qml  ExpCopyableText.qml  ExpIconButton.qml  ExpIconText.qml  ExpMargin.qml  ExpMouseMoveArea.qml  ExpMouseResizeArea.qml  ExpMoveMouseArea.qml  ExpPopup.qml  ExpRadius.qml  ExpRectangle.qml  ExpResizeMouseArea.qml  ExpStatusBar.qml  ExpText.qml  ExpWindow.qml
gallery/qml/Examples/Layout/: ExpDivider.qml  ExpFormItem.qml  ExpGroupBox.qml
gallery/qml/Examples/Multimedia/: ExpAudioDiagnosis.qml
gallery/qml/Examples/Navigation/: ExpBreadcrumb.qml  ExpContextMenu.qml  ExpMenu.qml  ExpPagination.qml  ExpScrollBar.qml
gallery/qml/Examples/Theme/: ExpTheme.qml  ExpThemeTokens.qml
gallery/qml/Examples/Utils/: ExpAsyncHasher.qml
gallery/qml/Home/: AboutPage.qml  CreatorPage.qml  HomePage.qml  SettingsPage.qml
src/: CMakeLists.txt
src/cpp/controls/: husaudioprobe.cpp  husaudioprobe.h  husqrcode.cpp  husqrcode.h  husrectangle.cpp  husrectangle.h  huswatermark.cpp
src/cpp/theme/: huscolorgenerator.cpp  hustheme.cpp  hustheme.h  hustheme_p.h  husthemefunctions.cpp  husthemefunctions.h
src/imports/: HusAcrylic.qml  HusAlert.qml  HusAnimatedImage.qml  HusAudioDiagnosis.qml  HusAutoComplete.qml  HusAvatar.qml  HusBadge.qml  HusBreadcrumb.qml  HusButton.qml  HusButtonBlock.qml  HusCaptionBar.qml  HusCaptionButton.qml  HusCard.qml  HusCarousel.qml  HusCheckBox.qml  HusCheckerBoard.qml  HusCollapse.qml  HusColorPicker.qml  HusColorPickerPanel.qml  HusContextMenu.qml  HusCopyableText.qml  HusDateTimePicker.qml  HusDivider.qml  HusDrawer.qml  HusEmpty.qml  HusFileBrowser.qml  HusFormItem.qml  HusGroupBox.qml  HusIconButton.qml  HusIconText.qml  HusImage.qml  HusImagePreview.qml  HusInput.qml  HusInputInteger.qml  HusInputNumber.qml  HusInputOnce.qml  HusMaskOverlay.qml  HusMenu.qml  HusMessage.qml  HusModal.qml  (+38 more)
src/theme/: HusAlert.json  HusAudioDiagnosis.json  HusAutoComplete.json  HusBreadcrumb.json  HusButton.json  HusCaptionButton.json  HusCard.json  HusCheckBox.json  HusCollapse.json  HusColorPicker.json  HusCopyableText.json  HusDateTimePicker.json  HusDivider.json  HusDrawer.json  HusEmpty.json  HusFormItem.json  HusGroupBox.json  HusIconText.json  HusImage.json  HusInput.json  HusInputNumber.json  HusMaskOverlay.json  HusMenu.json  HusMessage.json  HusModal.json  HusMultiSelect.json  HusNotification.json  HusPagination.json  HusPopover.json  HusPopup.json  HusProgress.json  HusQrCode.json  HusRadio.json  HusRadioBlock.json  HusRate.json  HusResult.json  HusSelect.json  HusShield.json  HusStatusBar.json  HusSwitch.json  (+9 more)
